--- a/ui/vzk-ui/src/app/homepage/home/home.component.css
+++ b/ui/vzk-ui/src/app/homepage/home/home.component.css
@@ -4,6 +4,8 @@
   z-index: 2;
   width: 100%; /* Set the width to 100% of the viewport width */
   box-sizing: border-box;
+  margin-right: -20px;
+  margin-left: -10px;
 }
 
 .twitch-separator-top {
@@ -13,14 +15,8 @@
   border-bottom: 20vw solid white;
 }
 
-.twitch-separator-bottom {
-  width: 0;
-  height: 0;
-  border-right: 100vw solid white;
-  border-bottom: 20vw solid transparent;
-}
-
 .twitch-box {
   background-color: white;
-  width: 100%;
+  width: 100vw;
+
 }
