--- a/ui/vzk-ui/src/app/homepage/news-box/news-box.component.css
+++ b/ui/vzk-ui/src/app/homepage/news-box/news-box.component.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center; /* Center content horizontally */
   text-align: center;
+  width: 100vw;
 }
 
 .news-list {
