--- a/ui/vzk-ui/src/app/homepage/twitch-box/twitch-box.component.css
+++ b/ui/vzk-ui/src/app/homepage/twitch-box/twitch-box.component.css
@@ -7,6 +7,7 @@
   background-image: url('src/assets/imgs/Untitled.jpg');
   background-repeat: repeat-y;
   padding-bottom: 100px;
+  width: 100vw;
 }
 .twitch-box {
   display: flex;
